[package]
name = "mini_redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "echo-server-copy"
path = "bin/echo-server-copy.rs"

[dependencies]
bytes = "1.9.0"
mini-redis = "0.4.1"
tokio = {version = "1.41.1", features = ["full"]}
